; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/gadget/extr_file_storage.c_raise_exception.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/gadget/extr_file_storage.c_raise_exception.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fsg_dev = type { i32, i32, i64, i32, i32 }

@SIGUSR1 = common dso_local global i32 0, align 4
@SEND_SIG_FORCED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fsg_dev*, i32)* @raise_exception to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @raise_exception(%struct.fsg_dev* %0, i32 %1) #0 {
  %3 = alloca %struct.fsg_dev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.fsg_dev* %0, %struct.fsg_dev** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.fsg_dev*, %struct.fsg_dev** %3, align 8
  %7 = getelementptr inbounds %struct.fsg_dev, %struct.fsg_dev* %6, i32 0, i32 1
  %8 = load i64, i64* %5, align 8
  %9 = call i32 @spin_lock_irqsave(i32* %7, i64 %8)
  %10 = load %struct.fsg_dev*, %struct.fsg_dev** %3, align 8
  %11 = getelementptr inbounds %struct.fsg_dev, %struct.fsg_dev* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load i32, i32* %4, align 4
  %14 = icmp ule i32 %12, %13
  br i1 %14, label %15, label %36

15:                                               ; preds = %2
  %16 = load %struct.fsg_dev*, %struct.fsg_dev** %3, align 8
  %17 = getelementptr inbounds %struct.fsg_dev, %struct.fsg_dev* %16, i32 0, i32 3
  %18 = load i32, i32* %17, align 8
  %19 = load %struct.fsg_dev*, %struct.fsg_dev** %3, align 8
  %20 = getelementptr inbounds %struct.fsg_dev, %struct.fsg_dev* %19, i32 0, i32 4
  store i32 %18, i32* %20, align 4
  %21 = load i32, i32* %4, align 4
  %22 = load %struct.fsg_dev*, %struct.fsg_dev** %3, align 8
  %23 = getelementptr inbounds %struct.fsg_dev, %struct.fsg_dev* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 8
  %24 = load %struct.fsg_dev*, %struct.fsg_dev** %3, align 8
  %25 = getelementptr inbounds %struct.fsg_dev, %struct.fsg_dev* %24, i32 0, i32 2
  %26 = load i64, i64* %25, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %35

28:                                               ; preds = %15
  %29 = load i32, i32* @SIGUSR1, align 4
  %30 = load i32, i32* @SEND_SIG_FORCED, align 4
  %31 = load %struct.fsg_dev*, %struct.fsg_dev** %3, align 8
  %32 = getelementptr inbounds %struct.fsg_dev, %struct.fsg_dev* %31, i32 0, i32 2
  %33 = load i64, i64* %32, align 8
  %34 = call i32 @send_sig_info(i32 %29, i32 %30, i64 %33)
  br label %35

35:                                               ; preds = %28, %15
  br label %36

36:                                               ; preds = %35, %2
  %37 = load %struct.fsg_dev*, %struct.fsg_dev** %3, align 8
  %38 = getelementptr inbounds %struct.fsg_dev, %struct.fsg_dev* %37, i32 0, i32 1
  %39 = load i64, i64* %5, align 8
  %40 = call i32 @spin_unlock_irqrestore(i32* %38, i64 %39)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @send_sig_info(i32, i32, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
